Document --add-opens